# TargetParser

./: .gitignore  README.md  pyproject.toml
src/targetparser/: __init__.py  _normalize.py  cleaner.py  extractor.py  mcp_server.py  reader.py  verifier.py
